[vividus] Add ability to set the encryption password via environment variable